--- a/assets/css/sass/general.scss
+++ b/assets/css/sass/general.scss
@@ -27,7 +27,7 @@
         position: relative;
         z-index: 2;
         @media(max-width: 1200px) {
-            margin: 2.25em auto 0;
+            margin: 0 auto 1.25em;
         }
         ul {
             li {
