--- a/assets/css/themepack.css
+++ b/assets/css/themepack.css
@@ -1,5 +1,7 @@
 .flocks-geodirectory-body-font, .geodir-page .ui-datepicker .ui-datepicker-buttonpane button, .geodir-page .ui-timepicker-div dl dt,
-.geodir-page .ui-timepicker-div dl dd, body .simplemodal-container#simplemodal-container .simplemodal-wrap .simplemodal-data form .row.clearfix input[type=text],
+.geodir-page .ui-timepicker-div dl dd, .widget .geodir_category_list_view > li .geodir-content > h3,
+#related_listingTab .geodir_category_list_view > li .geodir-content > h3,
+#geodir-main-content .geodir_category_list_view > li .geodir-content > h3, body .simplemodal-container#simplemodal-container .simplemodal-wrap .simplemodal-data form .row.clearfix input[type=text],
 body .simplemodal-container#simplemodal-container .simplemodal-wrap .simplemodal-data form .row.clearfix input[type=email],
 body .simplemodal-container#simplemodal-container .simplemodal-wrap .simplemodal-data form .row.clearfix textarea, .widget.widget_gd_features .gd-features li .gd-fe-title, #secondary .widget.geodir_cpt_categories_widget ul li h3,
 #site-footer-widgets.site-footer-section .widget.geodir_cpt_categories_widget ul li h3,
@@ -13,7 +15,9 @@ body .simplemodal-container#simplemodal-container .simplemodal-wrap .simplemodal
 }
 
 .themepack_font_awesome_before:before, #propertyform .geodir_form_row :not(#post_imagesdropbox) .plupload-upload-uic:before, #propertyform .geodir_form_row .plupload-thumbs .thumb .thumbi a:before, .geodir-page .ui-datepicker .ui-datepicker-header .ui-datepicker-prev span:before,
-.geodir-page .ui-datepicker .ui-datepicker-header .ui-datepicker-next span:before, .geodir_flex-container .geodir_flexslider .geodir-direction-nav li a:before, .gd-navi > a strong:before, .geodir-pos_navigation div a:before, .geodir-category-listing .geodir_more_info > ul li:before,
+.geodir-page .ui-datepicker .ui-datepicker-header .ui-datepicker-next span:before, .geodir_flex-container .geodir_flexslider .geodir-direction-nav li a:before, .widget .geodir_category_list_view > li .geodir-content > h3:before,
+#related_listingTab .geodir_category_list_view > li .geodir-content > h3:before,
+#geodir-main-content .geodir_category_list_view > li .geodir-content > h3:before, .gd-navi > a strong:before, .geodir-pos_navigation div a:before, .geodir-category-listing .geodir_more_info > ul li:before,
 .geodir-tabs ul > li .geodir_more_info > ul li:before,
 .geodir-tabs .geodir-category-listing .geodir_more_info > ul li:before,
 .geodir-tabs .geodir-company_info .geodir_more_info > ul li:before, .geodir-category-listing .geodir-i-location ~ span:before,
@@ -1140,6 +1144,28 @@ body .simplemodal-container#simplemodal-container .simplemodal-wrap .simplemodal
   margin: 0;
 }
 
+.widget .geodir_category_list_view > li .geodir-content > h3,
+#related_listingTab .geodir_category_list_view > li .geodir-content > h3,
+#geodir-main-content .geodir_category_list_view > li .geodir-content > h3 {
+  color: #fff;
+  background: #22b5ce;
+  font-size: 14px;
+  font-weight: 600;
+  text-transform: capitalize;
+  margin-top: 10px;
+  padding: 5px 7.5px;
+  border-radius: 4px;
+  display: inline-block;
+}
+
+.widget .geodir_category_list_view > li .geodir-content > h3:before,
+#related_listingTab .geodir_category_list_view > li .geodir-content > h3:before,
+#geodir-main-content .geodir_category_list_view > li .geodir-content > h3:before {
+  content: "\f277";
+  font-size: inherit;
+  margin-right: 5px;
+}
+
 .widget .geodir_category_list_view > li h3 a,
 #related_listingTab .geodir_category_list_view > li h3 a,
 #geodir-main-content .geodir_category_list_view > li h3 a {
@@ -1476,11 +1502,46 @@ dl.geodir-tab-head dd a {
 
 .geodir-tabs ul.geodir-tabs-content #post_imagesTab #geodir-post-gallery a {
   margin-right: 1.30%;
+  margin-bottom: 1.30%;
+  float: left;
   border: none;
 }
 
 .geodir-tabs ul.geodir-tabs-content #post_imagesTab #geodir-post-gallery a:nth-child(4n) {
   margin-right: 0;
+}
+
+@media (max-width: 992px) {
+  .geodir-tabs ul.geodir-tabs-content #post_imagesTab #geodir-post-gallery a {
+    width: 32.33%;
+  }
+  .geodir-tabs ul.geodir-tabs-content #post_imagesTab #geodir-post-gallery a:nth-child(4n) {
+    margin-right: 1.30%;
+  }
+  .geodir-tabs ul.geodir-tabs-content #post_imagesTab #geodir-post-gallery a:nth-child(3n) {
+    margin-right: 0;
+  }
+}
+
+@media (max-width: 768px) {
+  .geodir-tabs ul.geodir-tabs-content #post_imagesTab #geodir-post-gallery a {
+    width: 49%;
+  }
+  .geodir-tabs ul.geodir-tabs-content #post_imagesTab #geodir-post-gallery a:nth-child(3n) {
+    margin-right: 1.30%;
+  }
+  .geodir-tabs ul.geodir-tabs-content #post_imagesTab #geodir-post-gallery a:nth-child(2n) {
+    margin-right: 0;
+  }
+}
+
+@media (max-width: 480px) {
+  .geodir-tabs ul.geodir-tabs-content #post_imagesTab #geodir-post-gallery a {
+    width: 100%;
+  }
+  .geodir-tabs ul.geodir-tabs-content #post_imagesTab #geodir-post-gallery a:nth-child(3n) {
+    margin-right: 0;
+  }
 }
 
 .geodir-tabs ul.geodir-tabs-content #post_imagesTab #geodir-post-gallery a .geodir_thumbnail {
@@ -1732,7 +1793,7 @@ dl.geodir-tab-head dd a {
 
 .geodir-category-listing .geodir-i-location ~ span,
 .geodir-tabs .geodir-i-location ~ span {
-  padding-left: 22px;
+  padding-left: 25px;
   position: relative;
 }
 
@@ -1745,13 +1806,12 @@ dl.geodir-tab-head dd a {
 
 .geodir-category-listing .geodir-i-location ~ span[itemprop="streetAddress"]:before,
 .geodir-tabs .geodir-i-location ~ span[itemprop="streetAddress"]:before {
-  content: "\f041";
-  left: 3.5px;
+  content: "\f018";
 }
 
 .geodir-category-listing .geodir-i-location ~ span[itemprop="addressLocality"]:before,
 .geodir-tabs .geodir-i-location ~ span[itemprop="addressLocality"]:before {
-  content: "\f2bc";
+  content: "\f1ad";
 }
 
 .geodir-category-listing .geodir-i-location ~ span[itemprop="addressRegion"]:before,
@@ -2150,7 +2210,7 @@ body .simplemodal-container#simplemodal-container .simplemodal-wrap .simplemodal
 }
 
 .geodir-sidebar-wrap .geodir-details-sidebar-listing-info .geodir-i-location ~ span {
-  padding-left: 22px;
+  padding-left: 25px;
   position: relative;
 }
 
@@ -2161,12 +2221,11 @@ body .simplemodal-container#simplemodal-container .simplemodal-wrap .simplemodal
 }
 
 .geodir-sidebar-wrap .geodir-details-sidebar-listing-info .geodir-i-location ~ span[itemprop="streetAddress"]:before {
-  content: "\f041";
-  left: 3.5px;
+  content: "\f018";
 }
 
 .geodir-sidebar-wrap .geodir-details-sidebar-listing-info .geodir-i-location ~ span[itemprop="addressLocality"]:before {
-  content: "\f2bc";
+  content: "\f1ad";
 }
 
 .geodir-sidebar-wrap .geodir-details-sidebar-listing-info .geodir-i-location ~ span[itemprop="addressRegion"]:before {
@@ -3789,16 +3848,32 @@ dl.geodir-tab-head {
 
 .geodir_map_container {
   min-width: 100%;
+  max-width: 100%;
+  margin-bottom: 0;
 }
 
 .geodir_map_container.stickymap {
   border: none !important;
-  min-width: auto;
+  min-width: 370px;
   margin-top: -30px;
+  top: auto !important;
+  bottom: 0;
+}
+
+.geodir_map_container.stickymap .map_background {
+  background: #f6f8f9;
+  padding: 10px;
+  border-radius: 6px;
 }
 
 .geodir_map_container .main_map_wrapper {
   min-width: 100%;
+  max-width: 100%;
+}
+
+.geodir_map_container .main_map_wrapper .geodir_marker_cluster {
+  min-width: 100%;
+  max-width: 100%;
 }
 
 .geodir_map_container .main_map_wrapper .advmap_notloaded,
@@ -3961,7 +4036,7 @@ dl.geodir-tab-head {
 .stick_trigger_container .trigger_sticky {
   color: #fff;
   background: rgba(0, 0, 0, 0.45);
-  margin-top: 20px;
+  margin-top: 30px;
   margin-right: 0;
   min-width: 30px;
   min-height: 30px;
@@ -3988,11 +4063,17 @@ dl.geodir-tab-head {
 
 .stick_trigger_container .trigger_sticky.triggeroff_sticky {
   margin-right: 20px;
+  top: auto !important;
+  bottom: 300px;
 }
 
 .stick_trigger_container .trigger_sticky.triggeroff_sticky:before {
   content: "\f00d";
   top: 4.5px;
+}
+
+.loading_div {
+  max-width: 100%;
 }
 
 .body_fullscreen .stick_trigger_container {
