--- a/assets/css/sass/widgets.scss
+++ b/assets/css/sass/widgets.scss
@@ -270,6 +270,15 @@ body .geodir-widget {
         .geodir_recent_reviews_section {
             padding: 0;
         }
+        .geodir_reviewer_image {
+            width: 60px;
+            margin: 0 15px 0 0;
+            a,
+            img {
+                width: 100%;
+                display: inline-block;
+            }
+        }
         .geodir_recent_reviews {
             padding-left: 0;
             li {
@@ -693,14 +702,13 @@ body .geodir-widget {
             }
             .geodir-content{
                 p {
+                    max-height: 165px;
                     font-size: 14px;
-                    padding-bottom: 25px;
+                    padding-bottom: 0;
                     line-height: inherit;
                     position: relative;
                     .excerpt-read-more {
-                        position: absolute;
-                        left: 0;
-                        bottom: 0;
+                        display: none;
                     }
                 }
             }
@@ -710,13 +718,17 @@ body .geodir-widget {
                     width: 100%;
                     font-size: 14px;
                     padding: 0;
-                    margin: 10px 0;
+                    margin: 0 0 5px;
                     display: inline-block;
                     i {
                         font-size: 18px;
                         margin-right: 5px;
                         position: relative;
-                        top: 2px;
+                    }
+                }
+                .geodir-addtofav {
+                    i {
+                        left: 2px;
                     }
                 }
             }
@@ -807,9 +819,20 @@ dl.geodir-tab-head {
 }
 #secondary,
 #site-footer-widgets.site-footer-section,
+.geodir-sidebar-left,
+.geodir-sidebar-right,
 .geodir-details-sidebar-left,
 .geodir-details-sidebar-right {
     .widget {
+
+        &.geodir_related_listing_post_view,
+        &.geodir_popular_post_view {
+            .flocks_geodirectory_owl_carousel {
+                .owl-nav {
+                    top: 15%;
+                }
+            }
+        }
 
         // Best of Tabs Widget
         &.geodir_bestof_widget {
@@ -1230,6 +1253,132 @@ dl.geodir-tab-head {
                     li {
                         @media(min-width: 1200px) {
                             width: 100%;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+.widget {
+    &.geodir_related_listing_post_view,
+    &.geodir_popular_post_view {
+        .geodir-viewall {
+            @extend .flocks-geodirectory-button;
+            width: auto;
+            float: right;
+            display: inline-block;
+        }
+        .geodir_category_list_view {
+            opacity: 0;
+            -webkit-transition: all 0.5s ease-in-out;
+               -moz-transition: all 0.5s ease-in-out;
+                    transition: all 0.5s ease-in-out;
+        }
+        .flocks_geodirectory_owl_carousel {
+            opacity: 1;
+            overflow: hidden;
+            position: relative;
+
+            .owl-stage-outer {
+                z-index: 1;
+            }
+            .owl-item  {
+                display: inline-block;
+                li {
+                    width: 100%;
+                }
+            }
+            .owl-nav {
+                position: absolute;
+                width: 100%;
+                height: auto;
+                top: 35%;
+
+                .owl-prev,
+                .owl-next {
+                    width: 40px;
+                    height: 40px;
+                    color: #fff;
+                    background: #000;
+                    padding: 0;
+                    font-size: 0;
+                    line-height: normal;
+                    display: inline-block;
+                    opacity: 0.25;
+                    position: relative;
+                    z-index: 10;
+                    -webkit-transition: all 0.25s ease-in-out;
+                       -moz-transition: all 0.25s ease-in-out;
+                            transition: all 0.25s ease-in-out;
+                    @extend .themepack_font_awesome_before;
+                    &:hover {
+                        opacity: 1;
+                    }
+                    &:before {
+                        width: 40px;
+                        height: 40px;
+                        line-height: 40px;
+                        text-align: center;
+                    }
+                    &.disabled {
+                        opacity: 0;
+                    }
+                }
+                .owl-prev {
+                    float: left;
+                    &:before {
+                        content: "\f053";
+                    }
+                }
+                .owl-next {
+                    float: right;
+                    &:before {
+                        content: "\f054";
+                    }
+                }
+            }
+            .fieldset-separator,
+            .geodir_more_info {
+                display: none;
+            }
+            .geodir-content,
+            .geodir-post-img,
+            .geodir-addinfo {
+                @media(max-width: 768px) {
+                    width: 100%;
+                    margin: 0 0 10px;
+                    float: none;
+                }
+            }
+            .geodir-gridview {
+                h3 {
+                    margin: 0 0 15px;
+                }
+                .geodir-post-img {
+                    margin-bottom: 25px;
+                }
+                .geodir-content {
+                    width: 100%;
+                    margin: 0;
+                }
+                .geodir-entry-content {
+                    display: none;
+                    margin-bottom: 15px;
+                    p {
+                        padding-top: 0;
+                    }
+                }
+                .geodir-addinfo {
+                    width: 100%;
+                    margin: 0;
+                    .geodir-addtofav-icon {
+                        font-size: inherit;
+                    }
+                    .geodir-pcomments {
+                        i {
+                            position: relative;
+                            left: 3px;
                         }
                     }
                 }
